# openh2o

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Caddyfile  DEPLOY.md  DESIGN.md  Dockerfile  Makefile  NOTICE  PRODUCT.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  conftest.py  crontab.txt  deploy.sh  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  tailwind.config.js
.planning/: ISSUES.md  MILESTONES.md  PROJECT.md  ROADMAP.md  STATE.md  agent-history.json  current-agent-id.txt  plan-start-epoch.txt
accounting/: admin.py  allocation_math.py  apps.py  banking_math.py  calculation.py  carryover_math.py  confidence.py  forms.py  ledger_import.py  models.py  precip_math.py  recharge_policy.py  services.py  steps.py  urls.py  views.py
config/: asgi.py  urls.py  views.py  wsgi.py
core/: access.py  adapters.py  admin.py  apps.py  constants.py  context_processors.py  csv_safe.py  forms.py  models.py  modules.py  urls.py  validation.py  views.py  workspace.py
datasync/: admin.py  apps.py  freshness.py  models.py  urls.py  views.py
docs/: 2.0-ACCESSIBILITY-AUDIT.md  2.0-PHASE-F-DESIGN-PROPOSAL.md  2.0-UX-PATTERN-SPEC.md  2.0-UX-ROADMAP.md  AI-OPERATOR-GUIDE.md  DATA-IMPORT.md  DATA-STANDARDS.md  ROADMAP.md  crosswalk.csv  earth-engine-tier-setup.md
drinking/: admin.py  apps.py  envirofacts.py  envirofacts_mapping.py  glossary.py  importer.py  models.py  ps_codes.py  urls.py  views.py
feedback/: admin.py  apps.py  forwarder.py  models.py  urls.py  views.py
geography/: admin.py  apps.py  forms.py  models.py  placement.py  urls.py  views.py
health/: admin.py  apps.py  checks.py  models.py  urls.py  views.py
infrastructure/: apps.py  importer.py  urls.py  views.py
measurements/: admin.py  apps.py  models.py
parcels/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
recharge/: admin.py  apps.py  forms.py  geometry.py  models.py  urls.py  views.py
reporting/: admin.py  apps.py  forms.py  generators.py  models.py  report_types.py  services.py  urls.py  validators.py  views.py
scripts/: _demo-lib.sh  assert-image-fresh.sh  build-css.sh  export_merced_native.py  forward-pending-feedback.sh  render_baseline.py  reset-demo.sh  run-sync.sh  snapshot-demo.sh
secrets/: .gitkeep
setup/: apps.py  services.py  urls.py  views.py
standards/: admin.py  apps.py  models.py
surface/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
templates/: about.html  base.html  base_auth.html  home.html  index.html  logo-compare.html  workspace.html
tests/: factories.py  test_57_03_presentation.py  test_access_control.py  test_accounting_services.py  test_adapter_robustness.py  test_allocation_math.py  test_apportionment_math.py  test_auto_populate.py  test_banking.py  test_banking_math.py  test_basin_pool.py  test_billing_reconcile.py  test_calc_engine.py  test_calculation_run.py  test_carryover_integration.py  test_carryover_math.py  test_cdec_discovery.py  test_cimis_adapter.py  test_composition_rule.py  (+80 more)
(+556 files in other folders)
