[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openh2o"
version = "0.1.0"
description = "Open Water Accounting Platform for California water agencies"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.1,<6.0",
    "psycopg[binary]>=3.1",
    "django-environ>=0.11",
    "gunicorn>=22.0",
    "whitenoise>=6.7",
    "django-allauth[socialaccount]>=65.0",
    "django-extensions>=3.2",
    "django-htmx>=1.19",
    "Pillow>=10.0",
    "requests>=2.31",
    "earthengine-api>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "factory-boy>=3.3",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
pythonpath = ["."]
