[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openh2o"
version = "0.1.0"
description = "Open Water Accounting Platform for California water agencies"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [{ name = "Brent Vanderburgh" }]
# Note: do not add a "License ::" trove classifier — PEP 639 forbids combining
# it with the SPDX license expression above, and setuptools will refuse to build.
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    # Security floors: each lower bound excludes known-vulnerable releases so a
    # clean build can never resolve to one. Bump deliberately. (A lockfile is
    # the next step for fully reproducible builds.)
    "Django>=5.1.6,<6.0",
    "psycopg[binary]>=3.1",
    "django-environ>=0.11",
    "gunicorn>=22.0",  # 22.0 fixed the HTTP request-smuggling CVEs
    "whitenoise>=6.7",
    "django-allauth[socialaccount]>=65.0",
    "django-extensions>=3.2",
    "django-htmx>=1.19",
    "Pillow>=10.3",  # 10.2/10.3 fixed buffer-overflow CVEs; processes uploaded screenshots
    "requests>=2.32.2",  # 2.32.2 fixed the cert-verification regression
    "earthengine-api>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "factory-boy>=3.3",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
pythonpath = ["."]
